1.4.3 - Monday 08 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #14538: Performance degration for very high numbers of data points.
- Fixed #14857: Highlight text misplaced in charts with multiple bar data
  sets.


1.4.2 - Monday 30 March 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #14400: Add shortcut to set background color
- Fixed #14651: Handle floor() floating point inaccuracies in numneric axis
  step evaluation
- Fixed #14655: A full circle sector is not drawn at all in GD driver.


1.4.1 - Monday 09 February 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13631: Rendering issues, when axisSpace set to 0
- Resolved task #14219: Refactor grid drawing to be less susceptible to
  floating point inaccuracies
- Implemented feature #11980: Provide an initial array with labels for labeled
  axis
- Implemented feature #12897: Add the possibility to have a subtitle for
  Graphs.
- Implemented feature #13634: Make Offset of ezcGraphAxisRotatedLabelRenderer
  optional
- Implamented feature #14146: Add new data symbols - square and box


1.4 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.4rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #014010: Possibility to set x/y offsets for
  highlightValue. (Initial patch by Markus Lervik)


1.4beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.4alpha1 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #13103: Different axes end styles.
- Implemented feature #13102: Axes not extending beyond zero in line charts